--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo">UpSkill Studio</div>
+            <div class="logo">UpSkill Studio 2</div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
